src/app/project/projects/project-item/project-item.component.scss
img{
  max-height: 250px;
}


.container{
  text-align: justify;
}

.desc{
  font-family: 'Montserrat', sans-serif;
  text-align: justify;
}


.card{
  margin-top: 4rem;
  box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
  transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
  cursor: pointer;
}

.card:hover{
  transform: scale(1.05);
  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
}

.title{
  padding-bottom: 1rem;
  font-size: 3rem;
}


@media only screen and (max-width: 768px) {

  .row{
    display: block;
  }

  .title{
    text-align: center;
  }
}

